--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
+    "form-data": "^3.0.0",
     "prettier": "^2.0.5"
   }
 }
